--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1235,6 +1235,27 @@ About Page
 	font-size: 18px;
 	color: #ffd200;
 }
+.clasificacion {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.clasificacion input {
+  position: absolute;
+  top: -100px;
+}
+
+.clasificacion label {
+  float: right;
+  color: #333;
+}
+
+.clasificacion label:hover,
+.clasificacion label:hover ~ label,
+.clasificacion input:checked ~ label {
+  color: #dd4;
+}
 
 .authorities-section h2 {
 	font-weight: 700;
