--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -93,6 +93,20 @@ Helper CSS
 	padding-top: 102px;
 	padding-bottom: 102px;
 }
+.content{
+    border: 0px solid black;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 0 auto;
+    width: 50%;
+}
+
+.post{
+    border-bottom: 1px solid black;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 .text-white h1,
 .text-white h2,
@@ -722,10 +736,23 @@ Hero section
 	position: absolute;
   	top: 50%;
   	left: 50%;
-  	transform: translate(-50%,-50%);
+  	transform: translate(-50%,-10%);
   	font-family: "Open Sans", sans-serif;
   	border-radius: 12px;
   	/*border: 3px solid white; borde blanco*/
+}
+.container-buscar{
+	background-color: rgba(0,0,0,0.5);
+}
+.room-bottom {
+    padding: 2em 0;
+}
+.rom-btm {
+    margin-top: 2em;
+	box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.37);
+}
+.room-midle {
+    padding: 1em;
 }
 /*.hero-form:hover{
 	box-shadow: 0px 0px 60px #ffffff;
@@ -1534,9 +1561,27 @@ Galery Page
 /* ----------------
 Blog Page
  ------------------*/
+.blog-section .container{
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+}
 
 .blog-post {
 	margin-bottom: 68px;
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+}
+
+.blog-post .card{
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+}
+
+.blog-content{
+	background-color: white;
 }
 
 .blog-date {
